Fixing feedback button z-index

--- a/src/app/feedback/hover-button/hover-button.component.css
+++ b/src/app/feedback/hover-button/hover-button.component.css
@@ -1,4 +1,5 @@
 .fab {
+  z-index: 99999999;
   position: fixed;
   width: 56px;
   right: 20px;
